[tool.poetry]
name = "dsa"
version = "0.1.0"
description = ""
authors = ["chiachichi <dreamin10118@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
